Fix z-index issues (why god)

--- a/fanficforum/static/css/style.css
+++ b/fanficforum/static/css/style.css
@@ -333,6 +333,7 @@ blockquote.detail {
 @media(max-width:766px) {
     .navbar {
         position: fixed;
+        z-index: 1;
         height: 5%;
         width: 100vw;
         top: 0;
@@ -352,13 +353,15 @@ blockquote.detail {
         border-bottom: 1px #e7e7e7 solid;
     }
 
-    .navbar-header {
-        z-index: 99;
-    }
-
     .navbar > .container-fluid .navbar-brand {
         font-size: 3rem;
         margin-left: 32px;
+    }
+
+    .table-responsive {
+        position: relative;
+        z-index: 0;
+        display: block;
     }
 
     .navbar-header::before {
@@ -374,7 +377,7 @@ blockquote.detail {
     .navbar-collapse {
         background: #fff;
         margin-top: -2px;
-        z-index: 1;
+        position: relative;
         width: 100vw;
         border-bottom: 1px #e7e7e7 solid;
         filter: drop-shadow(0px 10px 5px rgba(0, 0, 0, 0.33));
